tests/paczka1/fuzzy1/55627857.err
Error in line 3: A5 S336 13,1
Error in line 4: Itp6n6zICLy A162 52,4
Error in line 12: A5 S336 30,3
Error in line 8: 8dYauj S359 31,9
Error in line 24: KVN1x S359 14,1
Error in line 25: Itp6n6zICLy S359 164,3
Error in line 32: Itp6n6zICLy S..6 66,0
Error in line 29: Itp6n6zICLy S336 34,9
